// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxDropdown renders 1`] = `
<div
  class="sc-fzozJi cKvNky"
  font-family="openSans"
>
  <div
    class="sc-fzoLsD egJkZq"
  >
    <button
      class="sc-fzpans DPLmR sc-Axmtr kEnUsO"
      color=""
      data-button-test="true"
      type="button"
    >
      <span
        class="sc-fznyAO sc-fznKkj juubTo"
      >
        hello
        <span
          class="sc-fzokOt jaaaQC"
        >
          0 selected
        </span>
      </span>
      <span
        class="sc-fznyAO etOYkZ sc-AxjAm jWlVxK lni lni-chevron-up"
      />
    </button>
    <ul
      class="sc-fzplWN jJnecp"
      data-item-list-test="true"
    >
      <li
        class="sc-fznZeY biVFou"
      >
        <label
          class="sc-AxheI bIWrzC"
        >
          <input
            class="sc-AxiKw iRBKSw"
            data-checkbox-test="true"
            type="checkbox"
            value="some value"
          />
          <div
            class="sc-AxhCb eJojxy"
          />
          <span
            class="sc-AxgMl aaWWq"
          >
            Some item
          </span>
        </label>
      </li>
      <li
        class="sc-fznZeY biVFou"
      >
        <label
          class="sc-AxheI bIWrzC"
        >
          <input
            class="sc-AxiKw iRBKSw"
            data-checkbox-test="true"
            type="checkbox"
            value="some other value"
          />
          <div
            class="sc-AxhCb eJojxy"
          />
          <span
            class="sc-AxgMl aaWWq"
          >
            Some other item
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CheckboxDropdown should be able to select item from list 1`] = `
<div
  class="sc-fzozJi cKvNky"
  font-family="openSans"
>
  <div
    class="sc-fzoLsD egJkZq"
  >
    <button
      class="sc-fzpans DPLmR sc-Axmtr kEnUsO"
      color=""
      data-button-test="true"
      type="button"
    >
      <span
        class="sc-fznyAO sc-fznKkj juubTo"
      >
        hello
        <span
          class="sc-fzokOt jaaaQC"
        >
          1 selected
        </span>
      </span>
      <span
        class="sc-fznyAO etOYkZ sc-AxjAm jWlVxK lni lni-chevron-up"
      />
    </button>
    <ul
      class="sc-fzplWN jJnecp"
      data-item-list-test="true"
    >
      <li
        class="sc-fznZeY biVFou"
      >
        <label
          class="sc-AxheI bIWrzC"
        >
          <input
            class="sc-AxiKw iRBKSw"
            data-checkbox-test="true"
            type="checkbox"
            value="some value"
          />
          <div
            class="sc-AxhCb cLwTNS"
          >
            <span
              class="sc-AxhUy eEXwPQ sc-AxjAm jWlVxK lni lni-checkmark"
            />
          </div>
          <span
            class="sc-AxgMl aaWWq"
          >
            Some item
          </span>
        </label>
      </li>
      <li
        class="sc-fznZeY biVFou"
      >
        <label
          class="sc-AxheI bIWrzC"
        >
          <input
            class="sc-AxiKw iRBKSw"
            data-checkbox-test="true"
            type="checkbox"
            value="some other value"
          />
          <div
            class="sc-AxhCb eJojxy"
          />
          <span
            class="sc-AxgMl aaWWq"
          >
            Some other item
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;
